--- a/index.html
+++ b/index.html
@@ -60,6 +60,59 @@
         <div>
             <h1 class="other half">Other Amount (Taka)
             </h1>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/">Donate Now</a>
+        </div>
+    </section>
+
+    <section>
+
+        <div>
+            <h1 class="half"> Our Donate Plan</h1>
+            <p class="pfont">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
+                deterruisset. No duo populo animal noluisse, enim
+            </p>
+        </div>
+    </section>
+
+
+    <section>
+        <div class="flexible-container">
+            <div class="maje expireance-iteam">
+
+                <h1>Food for a family</h1>
+                <p>
+                    Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.
+
+                </p>
+            </div>
+
+            <div class=" maje expireance-iteam">
+
+                <h1>Shelter for a family</h1>
+                <p>
+                    Amet minim mollit non deserunt
+
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.
+
+                </p>
+            </div>
+
+            <div class=" maje expireance-iteam">
+
+                <h1>Education for a child</h1>
+                <p>
+                    Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.
+                </p>
+            </div>
+
         </div>
     </section>
 
