--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
 
     <section>
         <div class="flexible-container">
-            <div class="maje expireance-iteam">
-
+            <div class=" foode maje expireance-iteam">
                 <h1>Food for a family</h1>
                 <p>
                     Amet minim mollit non deserunt
@@ -89,7 +88,7 @@
                 </p>
             </div>
 
-            <div class=" maje expireance-iteam">
+            <div class=" frame maje expireance-iteam">
 
                 <h1>Shelter for a family</h1>
                 <p>
@@ -102,7 +101,7 @@
                 </p>
             </div>
 
-            <div class=" maje expireance-iteam">
+            <div class="shelte maje expireance-iteam">
 
                 <h1>Education for a child</h1>
                 <p>
@@ -115,6 +114,8 @@
 
         </div>
     </section>
+
+
 
 </body>
 
