--- a/index.html
+++ b/index.html
@@ -115,6 +115,53 @@
         </div>
     </section>
 
+    <section class="flexible-containe">
+
+
+        <div class="halfer">
+            <h1>Their lives depend on your donation </h1>
+            <p>
+                Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim
+                Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset.
+            </p>
+        </div>
+        <div>
+            <img src="donation1.jpg" alt="">
+        </div>
+
+    </section>
+    <a class="link-button" target="_blank" href="https://www.facebook.com/">How to Contribute?
+    </a>
+
+
+    <section>
+        <div>
+            <img src="donation9.jpg" alt="">
+        </div>
+
+        <div>
+            <h1>They need us
+                to suvive</h1>
+
+            <p class="halfer">
+                Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim
+                Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset.
+
+            </p>
+        </div>
+    </section>
+    <a class="link-button" target="_blank" href="https://www.facebook.com/">How to Contribute?
+    </a>
+
+
+
+
 
 
 </body>
