--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
     </section>
 
     <section class="half">
-        <div class="half flexible-container">
+        <div class=" halferer half flexible-container">
 
-            <div class=" half expireance-iteam">
+            <div class="  bord half expireance-iteam">
                 <h1>100tk</h1>
             </div>
             <div class=" broder half expireance-iteam">
                 <h1>200tk</h1>
             </div>
-            <div class=" half expireance-iteam">
+            <div class="  bord half expireance-iteam">
                 <h1>500tk</h1>
             </div>
-            <div class=" half expireance-iteam">
+            <div class="bord half expireance-iteam">
                 <h1>1000tk</h1>
             </div>
-            <div class=" half expireance-iteam">
+            <div class="bord half expireance-iteam">
                 <h1>5000tk</h1>
             </div>
 
@@ -76,7 +76,7 @@
 
 
     <section>
-        <div class="flexible-container">
+        <div class=" halfere flexible-container">
             <div class=" foode maje expireance-iteam">
                 <h1>Food for a family</h1>
                 <p>
