--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 </head>
 
 <body>
-    <section class="donate">
+    <section class=" donate">
         <div class="font">
             <h1>Let’s Help Those Who Are </h1>
             <h1>More In Need</h1>
 
         </div>
 
-        <div class="fonte">
+        <div class="  fonte">
             <p>
                 Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
                 deterruisset. No duo populo animal noluisse, enim
             </p>
         </div>
-        <a class="link-button" target="_blank" href="https://www.facebook.com/">Donate Now</a>
+        <div class="button1">
+            <a class="link-button" target="_blank" href="https://www.facebook.com/">Donate Now</a>
+        </div>
     </section>
 
     <section>
@@ -57,10 +59,10 @@
 
         </div>
 
-        <div>
+        <div class="button-padding">
             <h1 class="other half">Other Amount (Taka)
             </h1>
-            <a class="link-button" target="_blank" href="https://www.facebook.com/">Donate Now</a>
+            <a class="  link-button" target="_blank" href="https://www.facebook.com/">Donate Now</a>
         </div>
     </section>
 
@@ -133,7 +135,7 @@
         </div>
 
     </section>
-    <a class="link-button" target="_blank" href="https://www.facebook.com/">How to Contribute?
+    <a class="  link-button" target="_blank" href="https://www.facebook.com/">How to Contribute?
     </a>
 
 
@@ -159,7 +161,31 @@
     <a class="link-button" target="_blank" href="https://www.facebook.com/">How to Contribute?
     </a>
 
+    <section>
+        <div>
+            <h1 class="majer">Get My Updates</h1>
 
+            <p class="maj">
+                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli<br>
+                deterruisset. No duo populo animal noluisse, enim
+
+            </p>
+        </div>
+
+    </section>
+
+
+    <section class=" padd flexible-container">
+        <div>
+            <label class="emg" for="Email">Email</label>
+            <input type="text" name="Email" id="Email" required>
+
+        </div>
+        <div>
+            <a class="buttons" target="_blank" href="https://www.facebook.com/">Subscribe
+            </a>
+        </div>
+    </section>
 
 
 
@@ -167,3 +193,11 @@
 </body>
 
 </html>
+
+
+<footer class="pooter">
+    <h1 class="color">Be Humble
+    </h1>
+    <h5 class="colorr">I’m gonna do it
+    </h5>
+</footer>
