--- a/index.html
+++ b/index.html
@@ -58,23 +58,26 @@
             </div>
 
         </div>
-
-        <div class="button-padding">
-            <h1 class="other half">Other Amount (Taka)
-            </h1>
-            <a class="  link-button" target="_blank" href="https://www.facebook.com/">Donate Now</a>
-        </div>
     </section>
 
-    <section>
+    <div>
+        <h1 class="other half">Other Amount (Taka)
+        </h1>
+    </div>
+    <a class=" button2 " target="_blank" href="https://www.facebook.com/">Donate Now</a>
 
-        <div>
-            <h1 class="half"> Our Donate Plan</h1>
-            <p class="pfont">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
-                deterruisset. No duo populo animal noluisse, enim
-            </p>
-        </div>
-    </section>
+
+
+
+
+
+    <div>
+        <h1 class=" donatePlan half"> Our Donate Plan</h1>
+        <p class="pfont">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
+            deterruisset. No duo populo animal noluisse, enim
+        </p>
+    </div>
+
 
 
     <section>
@@ -129,26 +132,27 @@
                 Lorem ipsum dolor sit amet, usu cu esse possit
                 referrentur, at eam falli deterruisset.
             </p>
-        </div>
-        <div>
+            <a class="  link-button" target="_blank" href="https://www.facebook.com/">How to Contribute?
+            </a>
+
+
             <img src="donation1.jpg" alt="">
         </div>
 
     </section>
-    <a class="  link-button" target="_blank" href="https://www.facebook.com/">How to Contribute?
-    </a>
 
 
-    <section>
-        <div>
-            <img src="donation9.jpg" alt="">
-        </div>
 
-        <div>
+    <section class="flexible-container">
+
+        <img src="donation9.jpg" alt="">
+
+
+        <div class="halfer">
             <h1>They need us
                 to suvive</h1>
 
-            <p class="halfer">
+            <p>
                 Lorem ipsum dolor sit amet, usu cu esse possit
                 referrentur, at eam falli deterruisset. No duo populo
                 animal noluisse, enim
@@ -156,10 +160,11 @@
                 referrentur, at eam falli deterruisset.
 
             </p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/">How to Contribute?
+            </a>
         </div>
     </section>
-    <a class="link-button" target="_blank" href="https://www.facebook.com/">How to Contribute?
-    </a>
+
 
     <section>
         <div>
