--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <section class="half">
-        <div class=" halferer half flexible-container">
+        <div class="taka">
 
             <div class="  bord half expireance-iteam">
                 <h1>100tk</h1>
@@ -60,11 +60,15 @@
         </div>
     </section>
 
-    <div>
-        <h1 class="other half">Other Amount (Taka)
-        </h1>
+    <div class="amount">
+        <div>
+            <p class="other ">Other Amount (Taka)</p>
+        </div>
+        <hr>
+        <div><a class=" button2 " target="_blank" href="https://www.facebook.com/">Donate Now</a>
+        </div>
     </div>
-    <a class=" button2 " target="_blank" href="https://www.facebook.com/">Donate Now</a>
+
 
 
 
@@ -81,8 +85,9 @@
 
 
     <section>
-        <div class=" halfere flexible-container">
+        <div class=" halfere flexible-containe">
             <div class=" foode maje expireance-iteam">
+                <div><img width="50px" height="50px" src="/icons/food.png" alt="foode"></div>
                 <h1>Food for a family</h1>
                 <p>
                     Amet minim mollit non deserunt
@@ -136,17 +141,21 @@
             </a>
 
 
-            <img src="donation1.jpg" alt="">
+
+        </div>
+
+        <div>
+
+            <img width="300px" height="300px" src="/images/donation8.jpg" alt="kisu leken">
         </div>
 
     </section>
 
 
 
-    <section class="flexible-container">
+    <section class="flexible-containe">
 
-        <img src="donation9.jpg" alt="">
-
+        <div><img width="300px" height="300px" src="/images/donation13.jpg" alt="ki dimu"></div>
 
         <div class="halfer">
             <h1>They need us
