--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section class=" donate">
+    <section class=" donate donatemain">
         <div class="font">
             <h1>Let’s Help Those Who Are </h1>
             <h1>More In Need</h1>
@@ -65,21 +65,21 @@
             <p class="other ">Other Amount (Taka)</p>
         </div>
         <hr>
-        <div><a class=" button2 " target="_blank" href="https://www.facebook.com/">Donate Now</a>
+        <div class="butmagin"><a class=" button2 " target="_blank" href="https://www.facebook.com/">Donate Now</a>
         </div>
     </div>
 
 
 
-
-
-
-
-    <div>
-        <h1 class=" donatePlan half"> Our Donate Plan</h1>
-        <p class="pfont">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
-            deterruisset. No duo populo animal noluisse, enim
-        </p>
+    <div class="amount">
+        <div>
+            <h1 class=" donatePlan half"> Our Donate Plan</h1>
+        </div>
+        <div>
+            <p class="pfont">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
+                deterruisset. No duo populo animal noluisse, enim
+            </p>
+        </div>
     </div>
 
 
@@ -189,13 +189,9 @@
     </section>
 
 
-    <section class=" padd flexible-container">
-        <div>
-            <label class="emg" for="Email">Email</label>
-            <input type="text" name="Email" id="Email" required>
-
-        </div>
-        <div>
+    <section class=" sectioninput">
+        <div class="inpurt">
+            <input class="inputi" type="text" placeholder="Email" required>
             <a class="buttons" target="_blank" href="https://www.facebook.com/">Subscribe
             </a>
         </div>
