--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section>
         <div class="dt">
             <h1>Donate Today</h1>
-            <p class="pfont">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
+            <p class="pfonte">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
                 deterruisset. No duo populo animal noluisse, enim
             </p>
         </div>
@@ -87,7 +87,7 @@
     <section>
         <div class=" halfere flexible-containe">
             <div class=" foode maje expireance-iteam">
-                <div><img width="50px" height="50px" src="/icons/food.png" alt="foode"></div>
+
                 <h1>Food for a family</h1>
                 <p>
                     Amet minim mollit non deserunt
