--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate</title>
+    <link rel="stylesheet" href="<link rel=" preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Roboto&display=swap" rel="stylesheet"">
+    <link rel=" stylesheet" href="<link rel=" preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Roboto&display=swap" rel="stylesheet">">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -85,7 +91,7 @@
 
 
     <section>
-        <div class=" halfere flexible-containe">
+        <div class=" div91 halfere flexible-containe">
             <div class=" foode maje expireance-iteam">
 
                 <h1>Food for a family</h1>
@@ -128,15 +134,17 @@
     <section class="flexible-containe">
 
 
-        <div class="halfer">
+        <div class=" div136 halfer">
             <h1>Their lives depend on your donation </h1>
-            <p>
-                Lorem ipsum dolor sit amet, usu cu esse possit
-                referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim
-                Lorem ipsum dolor sit amet, usu cu esse possit
-                referrentur, at eam falli deterruisset.
-            </p>
+            <div>
+                <p>
+                    Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim
+                    Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset.
+                </p>
+            </div>
             <a class="  link-button" target="_blank" href="https://www.facebook.com/">How to Contribute?
             </a>
 
@@ -144,9 +152,9 @@
 
         </div>
 
-        <div>
+        <div class="imag">
 
-            <img width="300px" height="300px" src="/images/donation8.jpg" alt="kisu leken">
+            <img width="350px" height="300px" src="donation11.jpg" alt="">
         </div>
 
     </section>
@@ -155,20 +163,24 @@
 
     <section class="flexible-containe">
 
-        <div><img width="300px" height="300px" src="/images/donation13.jpg" alt="ki dimu"></div>
+        <div class="div163">
+            <img width="350px" height="300px" src="donation10.jpg" alt="">
+        </div>
 
-        <div class="halfer">
+        <div class=" imaga halfer">
             <h1>They need us
                 to suvive</h1>
 
-            <p>
-                Lorem ipsum dolor sit amet, usu cu esse possit
-                referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim
-                Lorem ipsum dolor sit amet, usu cu esse possit
-                referrentur, at eam falli deterruisset.
+            <div>
+                <p>
+                    Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim
+                    Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset.
 
-            </p>
+                </p>
+            </div>
             <a class="link-button" target="_blank" href="https://www.facebook.com/">How to Contribute?
             </a>
         </div>
